@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+server/player.c: Make sure unpaid items are removed at death even on non-shop
+  floors.
+Arvid Norlander 2009-02-06
+
 server/spell_effect.c: Fix part of bug #2457751
   "Unpaid items work for some things...". Staff to snake and animate weapon no
   longer works on unpaid items.
